# fastdi

./: README.md  pyproject.toml  ruff.toml
benchmark/: classes.py  p_dishka.py  p_fastdi.py  run.py
examples/: main.py
src/fastdi/: __init__.py  graph.py  provider.py  resolver.py
src/fastdi/graph/: __init__.py  adjacent_dependencies.py  builders.py  compilation.py
src/fastdi/provider/: parsers.py  provider.py
