[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "fastdi"
version = "0.0.1"
authors = [
    { name = "Igor Gritsenko", email = "igoryuha.g@gmail.com" },
]
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/igoryuha/fastdi"